hphp/hack/test/typecheck/reactive/references_in_rx1.php.exp
File "references_in_rx1.php", line 5, characters 3-3:
A type specifier is expected here. (Parsing[1002])
